--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VR Chicken Game</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <title>Gallina Turuleca</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <audio id="backgroundMusic" loop autoplay>
+        <source src="./carnoise.mp3" type="audio/mpeg">
+        Tu navegador no soporta la reproducción de audio.
+    </audio>
     <canvas class="game"></canvas>
-    <div id="vr-button"></div>
+    <div id="controls">
+        <div>
+            <button id="forward">▲</button>
+            <button id="left">◀</button>
+            <button id="backward">▼</button>
+            <button id="right">▶</button>
+        </div>
+    </div>
+    <div id="score">0</div>
+    <div id="result-container">
+        <div id="result">
+            <h1>Game Over</h1>
+            <p>Your score: <span id="final-score"></span></p>
+            <button id="retry">Retry</button>
+        </div>
+    </div>
 
-    <script type="module" src="script.js"></script>
+    <div id="youtube-card">
+        This proyect isn't made by my self (me Jose Pablo), i just only follow a web tutorial to create it, the original one is made by Hunor Marthon Borbely
+    </div>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
