--- a/index.html
+++ b/index.html
@@ -1,26 +1,57 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crossy Road VR</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div id="game-container">
-        <canvas class="game"></canvas>
-        <div id="ui-overlay">
-            <div id="score-container">Puntuación: <span id="score">0</span></div>
-            <div id="result-container">
-                <h2>¡Juego Terminado!</h2>
-                <p>Tu puntuación final: <span id="final-score">0</span></p>
-                <button id="retry">Reintentar</button>
-            </div>
-        </div>
-    </div>
-    <div id="vr-button-container">
-        </div>
+<html>
+  <head>
+    <title>Gallina Turuleca VR (Concepto A-Frame)</title>
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <style>
+      body { margin: 0; overflow: hidden; }
+      #score {
+        position: fixed;
+        top: 20px;
+        left: 20px;
+        font-family: 'Press Start 2P', cursive;
+        font-size: 2em;
+        color: white;
+        z-index: 100;
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 10px;
+      }
+      /* Aquí podrías agregar más estilos CSS para el UI si usas HTML superpuesto */
+    </style>
+  </head>
+  <body>
+    <div id="score">0</div>
 
-    <script type="module" src="script.js"></script>
-</body>
+    <a-scene background="color: #ADD8E6" shadow="type: basic">
+      <a-entity id="rig" movement-controls="speed: 0.5" position="0 0 0">
+        <a-camera look-controls id="player-camera">
+          <a-cursor fuse="true" fuse-timeout="500"></a-cursor>
+        </a-camera>
+        <a-entity laser-controls="hand: right" raycaster="objects: .collidable; far: 100" line="opacity: 0.5"></a-entity>
+      </a-entity>
+
+      <a-entity light="type: ambient; color: #FFF; intensity: 0.8"></a-entity>
+
+      <a-entity light="type: directional; color: #AAA; intensity: 0.6; castShadow: true"
+                position="-100 200 -100" rotation="-90 0 0">
+        </a-entity>
+
+      <a-entity id="game-map"></a-entity>
+
+      <a-box id="player" color="white" width="0.5" height="0.5" depth="0.5" position="0 0.25 0" shadow="receive: true; cast: true"></a-box>
+
+      <a-box color="#baf455" width="34" height="0.1" depth="4" position="0 -0.05 0" shadow="receive: true;"></a-box>
+      <a-box color="#99c846" width="34" height="0.1" depth="4" position="34 -0.05 0" shadow="receive: true;"></a-box>
+      <a-box color="#99c846" width="34" height="0.1" depth="4" position="-34 -0.05 0" shadow="receive: true;"></a-box>
+
+      <a-plane position="0 1 -2" rotation="-90 0 0" width="1" height="0.5" color="#CCC" shadow="receive: true">
+        <a-text value="Forward" position="0 0.15 0.01" align="center" width="2"></a-text>
+        <a-box class="collidable" color="red" width="0.4" height="0.15" depth="0.05" position="0 0 0.02"
+               event-set__click="_target: #player; _event: click; color: blue;"></a-box>
+      </a-plane>
+
+    </a-scene>
+
+    <script src="script.js"></script>
+  </body>
 </html>
